chapter10/ingress/ingress1.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: quotes-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: quotes-virtual-service
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - quotes-gateway
  http:
  - route:
    - destination:
        host: back-service.default.svc.cluster.local
